ClipIt-v1.2.5-12112010002 - 12 Nov. 2010
	+ Fixed: Now using autopoint instead of gettextize to avoid waiting for
			user input.
	+ Fixed: Added AM_MAINTAINER_MODE, to get rid of the disable-maintainer-mode
			warning.
	+ Fixed: Fixed a small typo in main.c.
	+ Fixed: removed dependency of pthread.h (the pthread_exit function that we
			use is also included in glib.h).

ClipIt-v1.2.4-12112010001 - 12 Nov. 2010
	+ Fixed: Fixed 2 small omitions from previous changes.

ClipIt-v1.2.3-11112010002 - 11 Nov. 2010
	+ Fixed: Fixed the manpage so it now aligns to the conventions for 
			writing Linux man pages.
	+ Fixed: Added the "-Wl,--as-needed" flag, so only the needed packages
			are included.

ClipIt-v1.2.2-11112010001 - 11 Nov. 2010
	+ Fixed: Some small compatibility changes for debian packaging.

ClipIt-v1.2.1-10112010002 - 10 Nov. 2010
	+ Fixed: Fixed OOM bug when copying large chunks of text by limiting
			the history entry to 512KB.
			(http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=602205)

ClipIt-v1.2.0-10112010001 - 10 Nov. 2010
	+ Added: Option to save URIs (they were actually saved by default before, but
				now you have the option to disable this behaviour).
	+ Fixed: Copying files and folders now works again.
	+ Fixed: Changed some of the default configuration values.

ClipIt-v1.1.0-09112010001 - 09 Nov. 2010
	+ Added: Option to show index numbers in history.
	+ Fixed: Search window now gets properly focused when launched with the hotkey.
	+ Fixed: Search window is now resizable.
	+ Fixed: Double casting when calling 'item_selected'.
	+ Fixed: Removed some unnecessary comments and fixed some of the others.
	+ Fixed: Moved search dialog and functions to manage.c, as this dialog will
			become "Manage Clipboard" in the next version.

ClipIt-v1.0.0-05112010001 - 05 Nov. 2010
	Changes from Parcellite 0.9.2:
		+ Created "Small history" for quick access to last used items.
		+ Renamed the old history to "Full history".